# vue-element-admin

./: .clang-format  .gitignore  .gitmodules  1  2  3  CMakeLists.txt  NOTICE  OWNERS  README.md  build.sh  classify_rule.txt  classify_rule.yaml  package-lock.json
ops/built-in/: CMakeLists.txt
ops/built-in/aicpu/: .clang-format  CMakeLists.txt
ops/built-in/aicpu/context/: CMakeLists.txt  module.mk
ops/built-in/aicpu/folding/: CMakeLists.txt  folding.cc  folding.h  log.h
ops/built-in/aicpu/impl/: CMakeLists.txt  module.mk
ops/built-in/aicpu/scripts/: compile_aicpu_info.sh  compile_tf_info.sh
ops/built-in/aicpu/whitelist/: TF_whitelist.h
ops/built-in/dvpp/: CMakeLists.txt
ops/built-in/dvpp/op_info_cfg/: dvpp_ops_info_ascend310p.ini  dvpp_ops_info_ascend710.ini  dvpp_ops_info_ascend910b.ini  dvpp_ops_info_ascend920.ini
ops/built-in/framework/caffe_plugin/: CMakeLists.txt  arg_max_with_k_plugin.cc  basic_rnn_cell_plugin.cc  bias_plugin.cc  bnll_plugin.cc  caffe_absval_plugin.cc  caffe_ascend_anti_quant_plugin.cc  caffe_ascend_dequant_plugin.cc  caffe_ascend_dequant_s16_plugin.cc  caffe_ascend_quant_plugin.cc  caffe_ascend_requant_plugin.cc  caffe_ascend_requant_s16_plugin.cc  caffe_batch_matmul_plugin.cc  caffe_bninference_plugin.cc  caffe_condtake_plugin.cc  caffe_continuation_indicator_plugin.cc  caffe_conv2d_plugin.cc  caffe_deconv_plugin.cc  caffe_exp_plugin.cc  caffe_leaky_relu_plugin.cc  caffe_log_plugin.cc  caffe_mish_plugin.cc  caffe_permute_plugin.cc  caffe_prelu_plugin.cc  caffe_prior_box_plugin.cc  caffe_proposal_plugin.cc  caffe_psroipooling_plugin.cc  caffe_reduction_plugin.cc  caffe_tile_with_axis_plugin.cc  caffe_warp_perspective_plugin.cc  caffe_yolov2_detection_output_d_plugin.cc  caffe_yolov3_detection_output_d_plugin.cc  caffe_yolov3_detection_output_v2_d_plugin.cc  case_plugin.cc  concat_plugin.cc  copy_plugin.cc  correlation_plugin.cc  crop_plugin.cc  eltwise_plugin.cc  elu_plugin.cc  (+31 more)
ops/built-in/framework/onnx_plugin/: CMakeLists.txt  abs_plugin.cc  adaptive_average_pool2d_plugin.cc  adaptive_max_pool2d_plugin.cc  add_plugin.cc  addcmul_plugin.cc  affine_grid_plugin.cc  argmax_plugin.cc  argmin_plugin.cc  ascend_anti_quant_plugin.cc  ascend_dequant_plugin.cc  ascend_dequant_s16_plugin.cc  ascend_quant_plugin.cc  ascend_requant_plugin.cc  ascend_requant_s16_plugin.cc  average_pool_plugin.cc  batch_matmul_plugin.cc  batch_multi_class_non_max_suppression_plugin.cc  batch_normalization_plugin.cc  bitshift_plugin.cc  cast_plugin.cc  celu_plugin.cc  clip_plugin.cc  compress_plugin.cc  concat_plugin.cc  constantofshape_plugin.cc  conv2d_plugin.cc  conv_plugin.cc  conv_transpose_plugin.cc  cumsum_plugin.cc  deformable_conv_plugin.cc  deformable_offsets_plugin.cc  (+91 more)
ops/built-in/fusion_pass/: CMakeLists.txt
ops/built-in/fusion_rules/: CMakeLists.txt
ops/built-in/op_proto/: CMakeLists.txt  act_ulq_clamp_max_grad.cc  act_ulq_clamp_min_grad.cc  acts_ulq.cc  acts_ulq_input_grad.cc  aipp.cc  array_ops.cc  audio_ops.cc  avg_pool_1d_ops.cc  avg_pool_v2.cpp  avg_pool_v2.h  avg_pool_v2_grad.cpp  avg_pool_v2_grad.h  batch_ops.cc  bitwise_ops.cc  boosted_trees_ops.cc  candidate_sampling_ops.cc  case_condition_ops.cc  cluster.cc  condtake_ops.cc  control_flow_ops.cc  coordinates_1d_to_2d_ops.cc  copy_ops.cc  correlation.cc  ctc_ops.cc  data_flow_ops.cc  data_preprocess.cc  data_preprocess.h  deep_md.cc  elewise_calculation_ops.cc  encoding_ops.cc  format_transfer_fractal_z.cc  format_transfer_fractal_z.h  fsrdetectionoutput_ops.cc  functional_ops.cc  globalavgpool.cc  hcom_ops.cc  hvd_ops.cc  ifmr.cc  image_ops.cc  (+61 more)
ops/built-in/op_tiling/: CMakeLists.txt  aipp.cc  arg_max_v2.cc  arg_max_with_value.cc  as_strided.cc  as_strided.h  ascend_anti_quant.cc  ascend_quant.cc  assign.cc  auto_tiling.cc  auto_tiling.h  auto_tiling_context.cc  auto_tiling_context.h  auto_tiling_register.h  auto_tiling_rt2.cc  auto_tiling_rt2.h  avg_pool.cc  avg_pool3d.cc  avg_pool3d_grad.cc  avg_pool_1d.cc  avg_pool_grad.cc  avg_poolv2.cc  batch_multi_class_non_max_suppression.cc  batch_to_space_nd.cc  bias.cc  bias_add.cc  bias_add_grad.cc  binary_cross_entropy.cc  binary_cross_entropy_grad.cc  bitwise.cc  bn_reduce.cc  bn_reduce.h  bn_reduce_grad.cc  bn_training_reduce_grad.cc  bn_training_update.cc  bn_training_update_v2.cc  bn_training_update_v3.cc  bn_update_grad_tiling.cc  bninference_d.cc  bounding_box_decode.cc  (+246 more)
ops/built-in/tbe/: CMakeLists.txt
ops/built-in/tests/: CMakeLists.txt  README.md  cube_ut_loader.py  cube_ut_runner.py  get_change_relate_ops.py  module.mk  run_ut.py
ops/built-in/utils/: block_pool.cc  block_pool.h  block_store.cc  block_store.h  pool_allocator.h
ops/tests/: CMakeLists.txt  module.mk  ops_python_ut_rule.mk  prepare_proto.sh  run_test.sh  run_ut.py  set_env.sh
ops/tests/cmake/: config.cmake
ops/tests/common/: CMakeLists.txt
ops/tests/tools/: auto_gen_op_cases.py  auto_gen_ut.py
ops/tests/ut/: CMakeLists.txt
ops/tests/utils/: node_def_builder.cpp
tools/: CMakeLists.txt  OWNERS
tools/custom_operator_sample/: CMakeLists.txt  build.sh
tools/custom_operator_sample/dependency_files/: eigen.cmake  op_log.h  protobuf_static.cmake  secure_c_kernel.cmake  secure_c_proto.cmake
tools/msopgen/: CMakeLists.txt  module.mk  op_gen_rule.mk
tools/msopgen/op_gen/: msopgen.py
tools/msopgen/util/: MANIFEST.in  build_whl.sh  setup.py
tools/op_test_frame/: CMakeLists.txt  module.mk
tools/op_test_frame/python/: build_whl.sh  setup.py
tools/operator_demo_projects/: CMakeLists.txt  build.sh
tools/operator_demo_projects/tbe_operator_sample/: .project  module.mk
tools/python/: MANIFEST.in  setup.py
tools/sch_test_frame/: CMakeLists.txt  op_test_frame_rule.mk
tools/src/model_run_tool/: common_layer.cpp  common_layer.h
tools/tbe_toolkits/: requirements.txt  run.sh  run_tbe_toolkits.py
tools/tbe_toolkits/examples/: dynamic_conv2d_perf_testcases.csv
tools/tbe_toolkits/scripts/: gen_result_html.py
tools/tbe_toolkits/tbetoolkits/: __init__.py
tools/test/: run_st.py  run_test.sh  run_ut.py  setup.cfg
tools/test/util/: test_utils.py
(+12462 files in other folders)
